[package]
name = "maps-hasher"
authors = ["rtldg <rtldg@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
memmap2 = "0.5.3"
glob = "0.3.0"

serde = { version = "1.0.147", features = ["derive"] }
csv = "1.1.6"

bus = "2.3.0"
crossbeam = "0.8.2"

base16ct = { version = "0.1.1", features = ["std"] }
crc32fast = "1.3.2"
digest = "0.10.6"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
sha3 = "0.10.6"

